--- a/requirements.txt
+++ b/requirements.txt
@@ -11,6 +11,7 @@ google-pasta==0.2.0
 grpcio==1.32.0
 h5py==2.10.0
 idna==2.10
+Keras==2.4.3
 Keras-Preprocessing==1.1.2
 Markdown==3.3.3
 numpy==1.19.5
@@ -19,9 +20,11 @@ opt-einsum==3.3.0
 protobuf==3.15.2
 pyasn1==0.4.8
 pyasn1-modules==0.2.8
+PyYAML==5.4.1
 requests==2.25.1
 requests-oauthlib==1.3.0
 rsa==4.7.1
+scipy==1.6.1
 six==1.15.0
 structlog==21.1.0
 tensorboard==2.4.1
