--- a/config.json
+++ b/config.json
@@ -2,13 +2,25 @@
     "mode": "DEBUG",
 
     "dataset":  {
-        "filepath": "house-prices-advanced-regression-techniques",
+        "filepath": "credit-card-fraud-detection-prediction",
         "dirpath": "D:/datasets",
-        "type": "CSV",
-
-        "index": "Id"
+        "format": "CSV",
+        "category": "TIMESERIES",
+        
+        "index": "None",
+        "target_label": "Class",
+        "split_ratio": 0.8 
     },
     "metaset": {
         "description": "description.txt"
+    },
+    "model": {
+
+    },
+    "options":{
+        "FIX_COLUMN_INFO": "True"
+    },
+    "logs":{
+
     }
 }
