--- a/config.json
+++ b/config.json
@@ -9,10 +9,13 @@
         
         "index": "None",
         "target_label": "Class",
-        "split_ratio": 0.8 
+        "split_ratio": 0.8
+    },
+    "analyzer": {
+        "target_balancing": "equal"
     },
     "metaset": {
-        "description": "description.txt"
+        "descpath": "description.txt"
     },
     "model": {
         "MODEL": "Ensemble"
