--- a/config.json
+++ b/config.json
@@ -1,30 +1,26 @@
 {
     "mode": "DEBUG",
-
-    "dataset":  {
+    "dataset": {
         "filepath": "credit-card-fraud-detection-prediction",
         "dirpath": "D:/datasets",
         "format": "CSV",
         "category": "TIMESERIES",
-        
         "index": "None",
         "target_label": "Class",
         "split_ratio": 0.8
     },
     "analyzer": {
-        "target_balancing": "equal"
+        "target_balancing": "equal",
+        "visualization": "True"
     },
     "metaset": {
         "descpath": "description.txt"
     },
     "model": {
         "MODEL": "Ensemble"
-
     },
-    "options":{
+    "options": {
         "FIX_COLUMN_INFO": "True"
     },
-    "logs":{
-
-    }
+    "logs": {}
 }
