--- a/requirements.txt
+++ b/requirements.txt
@@ -21,7 +21,7 @@ Keras-Preprocessing==1.1.2
 kiwisolver==1.3.1
 Markdown==3.3.3
 MarkupSafe==1.1.1
-matplotlib==3.3.4
+matplotlib==3.2.0
 numpy==1.19.5
 oauthlib==3.1.0
 opt-einsum==3.3.0
@@ -41,6 +41,7 @@ retrying==1.3.3
 rsa==4.7.1
 scikit-learn==0.24.1
 scipy==1.6.1
+seaborn==0.11.1
 six==1.15.0
 sklearn==0.0
 structlog==21.1.0
