--- a/requirements.txt
+++ b/requirements.txt
@@ -1,58 +1,70 @@
-absl-py==0.11.0
-astunparse==1.6.3
-cachetools==4.2.1
-catboost==0.24.4
+appdirs==1.4.4
+argon2-cffi==20.1.0
+async-generator==1.10
+attrs==20.3.0
+backcall==0.2.0
+black==21.5b2
+bleach==3.3.0
 certifi==2020.12.5
-chardet==4.0.0
-cycler==0.10.0
-flatbuffers==1.12
-gast==0.3.3
-google-auth==1.27.0
-google-auth-oauthlib==0.4.2
-google-pasta==0.2.0
-graphviz==0.16
-grpcio==1.32.0
-h5py==2.10.0
-idna==2.10
+cffi==1.14.5
+chardet==3.0.4
+click==8.0.1
+colorama==0.4.4
+decorator==4.4.2
+defusedxml==0.6.0
+entrypoints==0.3
+idna==2.6
+ipykernel==5.5.0
+ipython==7.20.0
+ipython-genutils==0.2.0
+ipywidgets==7.6.3
+jedi==0.18.0
 Jinja2==2.11.3
-joblib==1.0.1
-Keras==2.4.3
-Keras-Preprocessing==1.1.2
-kiwisolver==1.3.1
-Markdown==3.3.3
+jsonschema==3.2.0
+jupyter==1.0.0
+jupyter-client==6.1.11
+jupyter-console==6.2.0
+jupyter-core==4.7.1
+jupyterlab-pygments==0.1.2
+jupyterlab-widgets==1.0.0
 MarkupSafe==1.1.1
-matplotlib==3.2.0
-numpy==1.19.5
-oauthlib==3.1.0
-opt-einsum==3.3.0
-pandas==1.2.3
-Pillow==8.1.2
-plotly==4.14.3
-protobuf==3.15.2
-pyasn1==0.4.8
-pyasn1-modules==0.2.8
+mistune==0.8.4
+mypy-extensions==0.4.3
+nbclient==0.5.2
+nbconvert==6.0.7
+nbformat==5.1.2
+nest-asyncio==1.5.1
+notebook==6.2.0
+numpy==1.20.3
+packaging==20.9
+pandocfilters==1.4.3
+parso==0.8.1
+pathspec==0.8.1
+pickleshare==0.7.5
+prometheus-client==0.9.0
+prompt-toolkit==3.0.16
+pycparser==2.20
+Pygments==2.8.0
 pyparsing==2.4.7
+pyrsistent==0.17.3
 python-dateutil==2.8.1
-pytz==2021.1
-PyYAML==5.4.1
-requests==2.25.1
-requests-oauthlib==1.3.0
-retrying==1.3.3
-rsa==4.7.1
-scikit-learn==0.24.1
-scipy==1.6.1
-seaborn==0.11.1
+pywin32==300
+pywinpty==0.5.7
+pyzmq==22.0.3
+qtconsole==5.0.2
+QtPy==1.9.0
+regex==2021.4.4
+requests==2.18.4
+Send2Trash==1.5.0
 six==1.15.0
-sklearn==0.0
-structlog==21.1.0
-tensorboard==2.4.1
-tensorboard-plugin-wit==1.8.0
-tensorflow==2.4.1
-tensorflow-estimator==2.4.0
-termcolor==1.1.0
-threadpoolctl==2.1.0
-typing-extensions==3.7.4.3
-urllib3==1.26.3
-Werkzeug==1.0.1
-wrapt==1.12.1
-xgboost==1.3.3
+terminado==0.9.2
+testpath==0.4.4
+toml==0.10.2
+torch==1.8.1
+tornado==6.1
+traitlets==5.0.5
+typing-extensions==3.10.0.0
+urllib3==1.22
+wcwidth==0.2.5
+webencodings==0.5.1
+widgetsnbextension==3.5.1
