--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,7 @@ cffi==1.14.5
 chardet==3.0.4
 click==8.0.1
 colorama==0.4.4
+cycler==0.10.0
 decorator==4.4.2
 defusedxml==0.6.0
 entrypoints==0.3
@@ -20,6 +21,7 @@ ipython-genutils==0.2.0
 ipywidgets==7.6.3
 jedi==0.18.0
 Jinja2==2.11.3
+joblib==1.0.1
 jsonschema==3.2.0
 jupyter==1.0.0
 jupyter-client==6.1.11
@@ -27,7 +29,9 @@ jupyter-console==6.2.0
 jupyter-core==4.7.1
 jupyterlab-pygments==0.1.2
 jupyterlab-widgets==1.0.0
+kiwisolver==1.3.1
 MarkupSafe==1.1.1
+matplotlib==3.4.2
 mistune==0.8.4
 mypy-extensions==0.4.3
 nbclient==0.5.2
@@ -37,10 +41,12 @@ nest-asyncio==1.5.1
 notebook==6.2.0
 numpy==1.20.3
 packaging==20.9
+pandas==1.2.4
 pandocfilters==1.4.3
 parso==0.8.1
 pathspec==0.8.1
 pickleshare==0.7.5
+Pillow==8.2.0
 prometheus-client==0.9.0
 prompt-toolkit==3.0.16
 pycparser==2.20
@@ -48,6 +54,7 @@ Pygments==2.8.0
 pyparsing==2.4.7
 pyrsistent==0.17.3
 python-dateutil==2.8.1
+pytz==2021.1
 pywin32==300
 pywinpty==0.5.7
 pyzmq==22.0.3
@@ -55,10 +62,14 @@ qtconsole==5.0.2
 QtPy==1.9.0
 regex==2021.4.4
 requests==2.18.4
+scikit-learn==0.24.2
+scipy==1.6.3
 Send2Trash==1.5.0
 six==1.15.0
+sklearn==0.0
 terminado==0.9.2
 testpath==0.4.4
+threadpoolctl==2.1.0
 toml==0.10.2
 torch==1.8.1
 tornado==6.1
