--- a/timeseries/config/data_config.yml
+++ b/timeseries/config/data_config.yml
@@ -1,6 +1,6 @@
 data:
     train: True
-    window_length: 4
+    window_length: 60
 
     BASE: "C:\\Users\\Handal\\github\\hiper-analysis-network\\timeseries\\data\\"
     end_name: "ambient_temperature_system_failure.csv"
@@ -8,19 +8,19 @@ data:
     data: "data\\realKnownCause\\"
     key: "realKnownCause/"
 
-    visualize: False
+    visualize: True
     fill_timegap : True
 
 
 args:
     train:
-        workers: 4
-        batch_size: 4
-        epochs: 1
-        lr: 0.0002
+        workers: 1
+        batch_size: 8
+        epochs: 200
+        lr: 0.0001
         cuda: True
-        manualSeed: 31
+        manualSeed: 2
 
     test:
         workers: 4
-        batch_size: 4
+        batch_size: 10
